# Hospital-Readmission-Predictor

./: .editorconfig  .gitattributes  .gitignore  Makefile  README.md  app.py  download_data.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
configs/: config.yaml
data/: .gitkeep
docker/: Dockerfile  docker-compose.yml
models/: best_model.pkl  feature_cols.pkl  model_metrics.pkl  scaler.pkl
notebooks/: 01_EDA.ipynb  02_Preprocessing.ipynb  03_Modeling.ipynb  04_Deployment.ipynb
src/: __init__.py  data_cleaning.py  modeling.py  visualization.py
tests/: test_model.py
